# P2PIM

./: .gitignore  CMakeLists.txt  README  README.md
BaronMessenger/: .cproject  .project  CMakeLists.txt
BaronMessenger/src/: BaronMessenger.cpp  CMakeLists.txt
Core.Common/: .cproject  .project  CMakeLists.txt
Core.DateTime/: .cproject  .project  CMakeLists.txt
Core.DateTime/headers/: Date.h  IDate.h  IDateTimeFormatter.h  IStdTimeConverter.h  StdDateTimeFormatter.h  StdTime.h  StdTimeConverter.h  StdTimePeriod.def  StdTimePeriod.h  TimePeriodConverter.h
Core.DateTime/src/: Date.cpp  StdDateTimeFormatter.cpp  StdTimeConverter.cpp  StdTimePeriod.cpp  TimePeriodConverter.cpp
Core.Loggers/: .cproject  .project  CMakeLists.txt
Core.Loggers/headers/: ConsoleTarget.h  FileTarget.h  ILevelLoggers.h  ILogConfig.h  ILogManager.h  ILogManagerFactory.h  ILogger.h  INamedTargets.h  IOutStream.h  ITarget.h  ITargetConfig.h  ITargetName.h  ITargetRulesManager.h  LevelLoggers.h  LogConfig.h  LogLevel.def  LogLevel.h  LogManager.h  LogManagerFactory.h  Logger.h  NamedTargets.h  OutStream.h  Target.h  TargetConfig.h  TargetName.h  TargetRulesManager.h
Core.Loggers/src/: ConsoleTarget.cpp  FileTarget.cpp  LevelLoggers.cpp  LogConfig.cpp  LogLevel.cpp  LogManager.cpp  LogManagerFactory.cpp  Logger.cpp  NamedTargets.cpp  OutStream.cpp  Target.cpp  TargetConfig.cpp  TargetName.cpp
Core.TypeWrappers/: CMakeLists.txt
Core.TypeWrappers/headers/: IOutStream.h  IOutStreamFactory.h  OutStream.h  OutStreamFactory.h
Core.TypeWrappers/src/: OutStream.cpp  OutStreamFactory.cpp
(+4 files in other folders)
